# prosody-stretch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release.py
prosody_stretch/: __init__.py  api.py  cli.py
prosody_stretch/analyzer/: __init__.py  audio.py  silence.py
prosody_stretch/core/: __init__.py  planner.py  report.py  segment.py  stretcher.py
prosody_stretch/strategies/: __init__.py  pause.py  stretch.py  vowel.py
